feat(20260522215718): 验证账号管理功能，运行完整测试流水线